# Programmieren1

./: .gitignore
.devcontainer/c/: devcontainer.json
courses/coding-in-C/: c_coding_conventions_for_embedded_systems.md
courses/coding-in-C++/: Praesentation.cpp  Uebung.Exception.Handling.cpp  Uebung.Template.cpp  cpp_coding_conventions.md
courses/coding-in-C++/Lab_1/: Lab_1.md  Test.cpp  grade.cpp  helloWorld.cpp
courses/coding-in-C++/Lab_1/solution/: age_validator.cpp  first_header.hpp  grade_report.cpp  helloWorld.cpp  report_utilities.cpp  report_utilities.hpp
courses/coding-in-C++/Lab_12/include/: calculator.hpp
courses/coding-in-C++/Lab_12/src/: calculator.cpp
courses/coding-in-C++/Lab_2/: Lab_2.md
courses/coding-in-C++/Lab_2/mySolution/: Section1.cpp  Section2.cpp  Section4.cpp  Section4.hpp  bankAcc2.0.cpp
courses/coding-in-C++/Lab_2/solution/: CMakeLists.txt  FaultyArticle.cpp  FixedArticle.cpp  Lab2_UML_Cinema.drawio  Lab2_UML_Class_SearchEngine.drawio  article_object_diagram.drawio  article_uml_class_diagram.drawio  bankAccount.cpp  fluentDrinkBuilder.cpp  fluentDrinkBuilder.hpp  lab2_sectionV_LearningPlatform.drawio  main.cpp  noteType.cpp  searchEngine.cpp  searchEngine.hpp  searchQuery.cpp  searchQuery.hpp  searchengine_main.cpp  searchengine_object_diagram.drawio  webResource.cpp  webResource.hpp
courses/coding-in-C++/Lab_3/: Lab_3.md
courses/coding-in-C++/Lab_3/mySolution/: Section2.cpp
courses/coding-in-C++/Lab_3/reference/: substitution_example.cpp
courses/coding-in-C++/Lab_3/solution/: game_character_system.cpp  game_character_system.hpp  game_character_system_main.cpp  sectionIII_solution.md  sectionII_solution.cpp
courses/coding-in-C++/Lab_4/: Lab_4.md
courses/coding-in-C++/Lab_4/mySolution/: Section1.cpp  Section2.cpp  Section3.cpp
courses/coding-in-C++/Lab_4/solution/: geometry_part_I.cpp  geometry_part_II.cpp  geometry_part_III.cpp  geometry_part_IV.cpp  inspections.cpp  inspections.hpp  mediaPlayer.cpp  production_system_main.cpp  products.cpp  products.hpp  quality_control_pipeline.cpp  quality_control_pipeline.hpp  reportable.hpp  vector2d.cpp
courses/coding-in-C++/Lab_5/: Lab_5.md
courses/coding-in-C++/Lab_5/mySolution/: Section1.cpp
courses/coding-in-C++/Lab_5/reference/: pair.cpp
courses/coding-in-C++/Lab_5/solution/: drone_test_bench.cpp  drone_test_bench.hpp
courses/coding-in-C++/Lab_6/: Lab_6.md  bugHunt_assistance_system.cpp  bugHunt_assistance_system.hpp  bugHunt_main.cpp  bugHunt_vehicle.cpp  bugHunt_vehicle.hpp
courses/coding-in-C++/Lab_6/solution/: vehicle.hpp  (+12 more)
courses/coding-in-C++/Lab_7/: CMakeLists.txt  Lab_7.md
courses/coding-in-C++/Lab_7/solution/: AdjacencyList.cpp  AdjacencyList.hpp  AdjacencyMatrix_SecI.cpp  AdjacencyMatrix_SecII.cpp  AdjacencyMatrix_SecII.hpp  AdjacencyMatrix_SecIII.cpp  AdjacencyMatrix_SecIII.hpp  Dijkstra.cpp  Dijkstra.hpp
courses/coding-in-C++/Lab_7/tests/: calculator_tests.cpp
courses/coding-in-C++/Lab_8/: FootballManager.cpp  FootballManager.hpp  Lab_8.md
courses/coding-in-C++/Lab_9/: Lab_9.md  broken_sensor.cpp  stock_analyzer.cpp
courses/coding-in-C/Aufgaben-1/: Calculator1.c  Calculator2.c  Calculator3.c  Schachbrett_1.c  SensorAuslese.c  Spaceship.c  pointer1.c
courses/coding-in-C/Lab_1/: Lab_1.md
courses/coding-in-C/Lab_10/: Lab_10.md
courses/coding-in-C/Lab_11/: Lab_11.md
courses/coding-in-C/Lab_12/: Lab_12.md
courses/coding-in-C/Lab_2/: Lab_2.md
courses/coding-in-C/Lab_3/: Lab_3.md
courses/coding-in-C/Lab_4/: Lab_4.md
courses/coding-in-C/Lab_5/: Lab_5.md
courses/coding-in-C/Lab_6/: Lab_6.md  sensor1.txt  sensor2.txt  test.txt
courses/coding-in-C/Lab_7/: Lab_7.md
courses/coding-in-C/Lab_8/: Lab_8.md
courses/coding-in-C/Lab_8/mysolutions/: CMakeLists.txt  main.c  playlist.o#
courses/coding-in-C/Lab_8/mysolutions/include/: playlist.h
courses/coding-in-C/Lab_8/mysolutions/src/: playlist.c
courses/coding-in-C/Lab_8/mysolutions/test/: test_playlist.c
courses/coding-in-C/Lab_9/: Lab_9.md
courses/coding-in-C/Lab_9/mysolutions/: CMakeLists.txt  main.c
courses/coding-in-C/Lab_9/mysolutions/include/: playlist.h
courses/coding-in-C/Lab_9/mysolutions/src/: playlist.c
courses/coding-in-VB/Lab_1/: Lab_1.md
courses/coding-in-VB/Lab_4/: Lab_4.md
(+51 files in other folders)
